<?xml version="1.0" encoding="utf-8"?><!--
  ~ EasyAsPi: A phone-based interface for the Raspberry Pi.
  ~ Copyright (C) 2017  vtcakavsmoace
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Raspberry Pi is a trademark of the Raspberry Pi Foundation.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".lib.disp.EAPDisplay">

    <ViewSwitcher
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/new_module_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/new_module_config_configurl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="1"
                    android:hint="@string/new_module_config_configurl"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:scrollHorizontally="true" />

                <Button
                    android:id="@+id/new_module_config_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_module_config_confirm" />

                <TextView
                    android:id="@+id/new_module_config_downloadstage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/new_module_config_downloadprogress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/module_returned_config"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/module_returned_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/button_cancel" />

                        <Button
                            android:id="@+id/module_returned_validate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/button_validate" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/module_returned_configname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="none"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:text="@string/module_returned_configname" />

                        <EditText
                            android:id="@+id/module_returned_configversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="none"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:text="@string/module_returned_configversion" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/module_returned_configurl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:text="@string/module_returned_configurl" />

                    <EditText
                        android:id="@+id/module_returned_jarurl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:text="@string/module_returned_jarurl" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:text="@string/module_returned_dependencies" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fadeScrollbars="false">

                        <LinearLayout
                            android:id="@+id/module_returned_dependencies"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </ScrollView>

                </LinearLayout>

                <ImageView
                    android:id="@+id/block_module_returned"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFilling"
            android:orientation="vertical">

        </LinearLayout>

    </ViewSwitcher>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
